--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create 5 list comprehensions to solve the following 5 problems:\n",
+    "<a!1. Create 5 list comprehensions to solve the following 5 problems:\n",
     "  1. Iterate a list of names to return a list of the names starting with H\n",
     "  2. In one line create a list of the numbers 1-100 to the power of 3\n",
     "  3. Iterate a list of names to create a list of tuples where the tuples first value is the length of the name and the second is the name\n",
@@ -21,14 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Henning\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.10 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"C:/Program Files/WindowsApps/PythonSoftwareFoundation.Python.3.9_3.9.2800.0_x64__qbz5n2kfra8p0/python3.9.exe\" -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
